--- a/notebooks/handwritten_numbers_classification.ipynb
+++ b/notebooks/handwritten_numbers_classification.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MNIST dataset hadnwritten numbers classification"
+    "# MNIST dataset handwritten numbers classification"
    ]
   },
   {
